- Added Gaea Seed to the loot table of Pridewing Skyhunter for the quest Cycle of Rebirth.
- Added Gaea Seed to the loot table of Pridewing Consort for the quest Cycle of Rebirth.
- Changed flags of Gaea Seed to allow every member of a group to loot it.

- Added Kodo Bone to the loot table of Aged Kodo for the quest Bone Collector.
- Added Kodo Bone to the loot table of Dying Kodo for the quest Bone Collector.
- Added Kodo Bone to the loot table of Ancient Kodo for the quest Bone Collector.
- Changed flags of Kodo Bone to allow every member of a group to loot it.

- Added the script for Desolace to make the quest Kodo Roundup trigger for every member of a group.

[2021-12-24]
- Changed the respawn time of Gri'lek the Wanderer.

[2021-12-25]
- Added Salvaged Wood to the loot table of Bonechewer Scavenger for the quest I Work... For the Horde!
- Added Salvaged Metal to the loot table of Bonechewer Scavenger for the quest I Work... For the Horde!
- Changed flags of Salvaged Wood to allow every member of a group to loot it.
- Changed flags of Salvaged Metal to allow every member of a group to loot it.

- Changed the respawn time of Metal Coffer.

[2021-12-26]
- Added Ever-burning Ash to the loot table of Felfire Diemetradon for the quests A Haunted History and A Ghost in the Machine.
- Added Ever-burning Ash to the loot table of Felboar for the quests A Haunted History and A Ghost in the Machine.
- Changed flags of Ever-burning Ash to allow every member of a group to loot it.

[2021-12-27]
- Added Etherlithium Matrix Crystal to the loot table of Disembodied Vindicator for the quest You're Hired!.
- Added Etherlithium Matrix Crystal to the loot table of Disembodied Protector for the quest You're Hired!.
- Changed flags of Etherlithium Matrix Crystal to allow every member of a group to loot it.

- Added Ethereal Technology to the loot table of Zaxxis Raider for the quest Pick Your Part.
- Changed flags of Ethereal Technology to allow every member of a group to loot it.